--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbzlfvSGvMRYAnRgxxMjkzhwkVjcVtqbrMswsjYadY5n8_hGH80PwyuG_ymRh8UUTjHS/exec";
+    const AS_URL_BASE = "https://script.google.com/a/~/macros/s/AKfycbzlfvSGvMRYAnRgxxMjkzhwkVjcVtqbrMswsjYadY5n8_hGH80PwyuG_ymRh8UUTjHS/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
